--- a/Anchor.toml
+++ b/Anchor.toml
@@ -13,6 +13,7 @@ url = "https://api.apr.dev"
 [provider]
 cluster = "devnet"
 wallet = "~/.solana/wallets/devnet-wallet.json"
+test = "~/.solana/wallets/devnet-wallet2.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
