--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     },
     "dependencies": {
         "@coral-xyz/anchor": "^0.27.0",
+        "@metaplex-foundation/mpl-token-metadata": "^2.11.0",
         "@solana/spl-token": "^0.3.7"
     },
     "devDependencies": {
